--- a/README.adoc
+++ b/README.adoc
@@ -174,6 +174,10 @@ These are some of the IDE plugins which use odo:
 * link:http://plugins.jetbrains.com/plugin/12030-openshift-connector-by-red-hat[Openshift Connector for Intellij]
 * link:https://www.eclipse.org/codewind[Codewind for Eclipse Che]
 
+[[experimental-mode]]
+== Experimental mode
+
+Want to try out the odo experimental mode? Please read the link:https://github.com/openshift/odo/blob/master/docs/dev/experimental-mode.adoc[document] for more information.
 
 [[glossary]]
 == Glossary
