--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -512,7 +512,7 @@ Below is working example of how we would implement a "HelloWorld" struct.
     machineOutput := GenericSuccess{
       TypeMeta: metav1.TypeMeta{
         Kind:       "HelloWorldExample",
-        APIVersion: "odo.openshift.io/v1alpha1",
+        APIVersion: "odo.openshift.io/v1",
       }, 
       ObjectMeta: metav1.ObjectMeta{
         Name: "MyProject",
