Adding messaging and script updates to ensure smoother golang updates
 - Updated rpm spec and rpm-prepare script to template golang version
 - Docs now contain a warning about golang version update

Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -7,7 +7,12 @@ toc::[]
 
 == Setting up
 
-Requires *Go 1.13*
+Requires *Go 1.12*
+
+**WARNING**: If you are adding any features that require a higher version of golang, such as golang 1.13
+for example, please contact maintainers to check of the releasing systems can handle the newer versions.
+
+If that is ok, please ensure you update the required golang version, both here and in the file link:/scripts/rpm-prepare.sh[`scripts/rpm-prepare.sh`]
 
  . link:https://help.github.com/en/articles/fork-a-repo[Fork] the link:https://github.com/openshift/odo[`odo`] repository.
 
