--- a/docs/dev/machine-output.adoc
+++ b/docs/dev/machine-output.adoc
@@ -170,7 +170,7 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "Application",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {
     "name": "app",
     "namespace": "myproject",
@@ -189,12 +189,12 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "List",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {},
   "items": [
     {
       "kind": "Application",
-      "apiVersion": "odo.openshift.io/v1alpha1",
+      "apiVersion": "odo.dev/v1alpha1",
       "metadata": {
         "name": "app",
         "namespace": "myproject",
@@ -219,7 +219,7 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
     "kind": "Component",
-    "apiVersion": "odo.openshift.io/v1alpha1",
+    "apiVersion": "odo.dev/v1alpha1",
     "metadata": {
         "name": "nodejs-nodejs-ex-xvgz",
         "namespace": "foobarz",
@@ -232,12 +232,12 @@ See the below table for a list of all possible machine readable output commands:
         "sourceType": "local",
         "urls": {
             "kind": "List",
-            "apiVersion": "odo.openshift.io/v1alpha1",
+            "apiVersion": "odo.dev/v1alpha1",
             "metadata": {},
             "items": [
                 {
                     "kind": "url",
-                    "apiVersion": "odo.openshift.io/v1alpha1",
+                    "apiVersion": "odo.dev/v1alpha1",
                     "metadata": {
                         "name": "myurl",
                         "creationTimestamp": null
@@ -254,7 +254,7 @@ See the below table for a list of all possible machine readable output commands:
                 },
                 {
                     "kind": "url",
-                    "apiVersion": "odo.openshift.io/v1alpha1",
+                    "apiVersion": "odo.dev/v1alpha1",
                     "metadata": {
                         "name": "json",
                         "creationTimestamp": null
@@ -271,12 +271,12 @@ See the below table for a list of all possible machine readable output commands:
         },
         "storages": {
             "kind": "List",
-            "apiVersion": "odo.openshift.io/v1alpha1",
+            "apiVersion": "odo.dev/v1alpha1",
             "metadata": {},
             "items": [
                 {
                     "kind": "storage",
-                    "apiVersion": "odo.openshift.io/v1alpha1",
+                    "apiVersion": "odo.dev/v1alpha1",
                     "metadata": {
                         "name": "mystorage",
                         "creationTimestamp": null
@@ -288,7 +288,7 @@ See the below table for a list of all possible machine readable output commands:
                 },
                 {
                     "kind": "storage",
-                    "apiVersion": "odo.openshift.io/v1alpha1",
+                    "apiVersion": "odo.dev/v1alpha1",
                     "metadata": {
                         "name": "mystorage2",
                         "creationTimestamp": null
@@ -323,12 +323,12 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "List",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {},
   "items": [
     {
       "kind": "Component",
-      "apiVersion": "odo.openshift.io/v1alpha1",
+      "apiVersion": "odo.dev/v1alpha1",
       "metadata": {
         "name": "nodejs-nvnh",
         "creationTimestamp": null
@@ -358,12 +358,12 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "List",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {},
   "items": [
     {
       "kind": "Project",
-      "apiVersion": "odo.openshift.io/v1alpha1",
+      "apiVersion": "odo.dev/v1alpha1",
       "metadata": {
         "name": "myproject",
         "creationTimestamp": null
@@ -387,7 +387,7 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "storage",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {
     "name": "mystorage",
     "creationTimestamp": null
@@ -405,12 +405,12 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "List",
-  "apiVersion": "odo.openshift.io/v1aplha1",
+  "apiVersion": "odo.dev/v1aplha1",
   "metadata": {},
   "items": [
     {
       "kind": "Storage",
-      "apiVersion": "odo.openshift.io/v1alpha1",
+      "apiVersion": "odo.dev/v1alpha1",
       "metadata": {
         "name": "mystorage",
         "creationTimestamp": null
@@ -430,7 +430,7 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "url",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {
     "name": "foobar-8080",
     "creationTimestamp": null
@@ -449,12 +449,12 @@ See the below table for a list of all possible machine readable output commands:
 ----
 {
   "kind": "List",
-  "apiVersion": "odo.openshift.io/v1alpha1",
+  "apiVersion": "odo.dev/v1alpha1",
   "metadata": {},
   "items": [
     {
       "kind": "url",
-      "apiVersion": "odo.openshift.io/v1alpha1",
+      "apiVersion": "odo.dev/v1alpha1",
       "metadata": {
         "name": "foobar-8080",
         "creationTimestamp": null
